--- a/deno.json
+++ b/deno.json
@@ -1,26 +1,41 @@
 {
+  "$schema": "https://jsr.io/schema/config-file.v1.json",
+  "name": "@your-scope/penpot-api",
+  "version": "1.0.0",
+  "description": "A modern, multi-runtime, type-safe API client for Penpot, designed for Deno, Node.js, Bun, and browsers.",
+  "exports": {
+    ".": "./src/index.ts",
+    "./types": "./src/types.ts"
+  },
   "compilerOptions": {
     "strict": true,
-    "lib": ["deno.window", "deno.unstable"]
+    "lib": ["ESNext", "DOM"]
   },
   "imports": {
-    "@penpot/api-client": "jsr:@penpot/api-client@^0.1.0",
-    "jsr:@std/path": "jsr:@std/path@^0.224.0",
-    "jsr:@std/fs": "jsr:@std/fs@^0.224.0",
-    "jsr:@std/flags": "jsr:@std/flags@^0.224.0",
-    "jsr:@std/assert": "jsr:@std/assert@^0.224.0"
+    "jsr:@std/assert": "jsr:@std/assert@^0.226.0",
+    "jsr:@std/path": "jsr:@std/path@^0.225.0",
+    "jsr:@std/fs": "jsr:@std/fs@^0.229.0",
+    "openapi-typescript": "npm:openapi-typescript@^6.7.5",
+    "eventsource-parser": "npm:eventsource-parser@^1.1.2",
+    "vitest": "npm:vitest@^1.6.0"
   },
   "tasks": {
-    "gen": "deno run --allow-read=./openapi.json --allow-write=src/client/generated/ src/scripts/generate_client.ts",
-    "test": "deno test src/tests/",
+    "gen": "deno run --allow-read --allow-write --allow-env ./src/scripts/generate.ts",
+    "test": "deno task test:node",
+    "test:deno": "deno test --allow-net ./src/tests/",
+    "test:node": "deno run --allow-read --allow-net --allow-env npm:vitest run",
+    "test:bun": "bun test",
     "fmt": "deno fmt",
-    "lint": "deno lint"
+    "lint": "deno lint",
+    "check": "deno check src/index.ts"
   },
-  "fmt": {
-    "include": ["src/", "examples/", "."],
-    "exclude": ["src/client/generated/"]
-  },
-  "lint": {
-    "include": ["src/", "examples/", "."]
+  "publish": {
+    "exclude": [
+      "src/tests/",
+      "src/scripts/",
+      ".vscode/",
+      "vitest.config.ts",
+      "*.test.ts"
+    ]
   }
 }
