--- a/src/examples/npm/package.json
+++ b/src/examples/npm/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@ajsb85/penpot-api-client": "^1.0.2"
+    "@ajsb85/penpot-api-client": "npm:@jsr/ajsb85__penpot-api-client@^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
